--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -9,7 +9,7 @@ const { href, title, body } = Astro.props
 ---
 
 <li class="link-card">
-  <a href={`/${href}/`} class="flex flex-col space-y-1">
+  <a href={`/veNFT-unlock-timeline/${href}/`} class="flex flex-col space-y-1">
     <img src={`/${href}.png`} alt={title} class="max-w-[64px]" />
     <h2 class="font-bold">
       {title}
