--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -10,7 +10,7 @@ const { href, title, body } = Astro.props
 
 <li class="link-card">
   <a href={`/veNFT-unlock-timeline/${href}/`} class="flex flex-col space-y-1">
-    <img src={`/${href}.png`} alt={title} class="max-w-[64px]" />
+    <img src={`/veNFT-unlock-timeline/${href}.png`} alt={title} class="max-w-[64px]" />
     <h2 class="font-bold">
       {title}
       <span>&rarr;</span>
