--- a/src/pages/[path].astro
+++ b/src/pages/[path].astro
@@ -82,7 +82,7 @@ d = thursdays.map((key) => {
   <h1
     class="text-center text-2xl my-10 flex justify-center items-center space-x-2"
   >
-    <a href="/" title="Visit homepage"
+    <a href="/veNFT-unlock-timeline/" title="Visit homepage"
       ><img class="w-[48px]" src={`/${path}.png`} alt={path} /></a
     >
     <span>{path} Unlock Timeline</span>
