--- a/src/pages/[path].astro
+++ b/src/pages/[path].astro
@@ -82,8 +82,12 @@ d = thursdays.map((key) => {
   <h1
     class="text-center text-2xl my-10 flex justify-center items-center space-x-2"
   >
-    <a href="/veNFT-unlock-timeline/" title="Visit homepage"
-      ><img class="w-[48px]" src={`/${path}.png`} alt={path} /></a
+    <a href={`${import.meta.env.BASE_URL}`} title="Visit homepage"
+      ><img
+        class="w-[48px]"
+        src={`${import.meta.env.BASE_URL}${path}.png`}
+        alt={path}
+      /></a
     >
     <span>{path} Unlock Timeline</span>
   </h1>
