--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -18,7 +18,7 @@ const { href, title, body } = Astro.props
       alt={title}
       class="max-w-[64px]"
     />
-    <h2 class="font-bold">
+    <h2 class="text-xl">
       {title}
       <span>&rarr;</span>
     </h2>
