--- a/src/pages/[path].astro
+++ b/src/pages/[path].astro
@@ -134,6 +134,9 @@ d = thursdays.map((key) => {
           bottom: 0,
         },
       },
+      timeScale: {
+        rightOffset: 10,
+      },
       crosshair: {
         // hide the horizontal crosshair line
         horzLine: {
